Fixed all but one display bug for all supported devices. The only one missing is iPad Pro. Remaining issue: The linebreaks for 1024px are in unfortunate positions so that the buttons do not align well.

--- a/css/style.css
+++ b/css/style.css
@@ -492,28 +492,28 @@ li {
 .intro-main-hr {
   margin-top: 27px; }
 
-.main-content img {
-  width: 55px;
-  margin: auto; }
-
 .main-content {
   width: 90%;
   margin: auto;
   display: flex;
   flex-wrap: wrap; }
+  .main-content img {
+    width: 55px;
+    margin: auto; }
 
 .learn-more {
+  position: relative;
   background-color: #343535;
   color: #fff;
   display: inline-block;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
-  margin-top: 10px;
+  margin: auto;
   padding: 0.75em 1.5em;
   border-radius: 0.45em;
   transition: 0.3s;
-  border: none; }
+  border: 0px; }
   .learn-more:hover {
     color: #F7931A;
     text-decoration: none; }
@@ -524,14 +524,17 @@ li {
   border: 1px solid #eee;
   border-radius: 0.75em;
   padding: 1.5em 1em;
-  margin: 10px; }
+  margin: 10px;
+  position: relative; }
   @media (min-width: 576px) {
     .card {
       flex: 1 46%; } }
   .card #glossar-img {
     margin-left: 20px; }
-  .card a {
-    margin-top: auto; }
+  .card h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-top: 20px; }
 
 footer {
   height: 100px;
